@@ -1,4 +1,4 @@
-/* $OpenBSD: roaming_client.c,v 1.1 2009/10/24 11:22:37 andreas Exp $ */
+/* $OpenBSD: roaming_client.c,v 1.2 2010/01/09 05:17:00 dtucker Exp $ */
 /*
  * Copyright (c) 2004-2009 AppGate Network Security AB
  *
@@ -122,7 +122,7 @@ roaming_auth_required(void)
 	calculate_new_key(&key1, cookie, chall);
 	calculate_new_key(&key2, cookie, chall);
 
-	debug("Received %" PRIu64 " bytes", get_recv_bytes());
+	debug("Received %llu bytes", (long long unsigned)get_recv_bytes());
 	debug("Sent roaming_auth packet");
 }
 
@@ -216,7 +216,7 @@ roaming_resume(void)
 		goto fail;
 	}
 	recv_bytes = packet_get_int64() ^ oldkey2;
-	debug("Peer received %" PRIu64 " bytes", recv_bytes);
+	debug("Peer received %llu bytes", (long long unsigned)recv_bytes);
 	resend_bytes(packet_get_connection_out(), &recv_bytes);
 
 	resume_in_progress = 0;
